--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,13 +10,12 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Auto Minify
-        uses: nizarmah/auto-minify@v2.1
-        with:
-          output: 'build'
-          overwrite: true
+      - name: Minify Action
+        uses: anthonyftwang/minify-action@v1.0.1
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      # Auto-commit to repository
+      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          folder: build # The folder the action should deploy.
+          commit_message: Minify source code
+          branch: ${{ github.ref }}
+        
