Revert "Update static.yml"
This reverts commit d822efec6bd2c8c9282a6c448ddffd05d59edd9b.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,12 +10,13 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Minify Action
-        uses: anthonyftwang/minify-action@v1.0.1
-
-      # Auto-commit to repository
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Auto Minify
+        uses: nizarmah/auto-minify@v2.1
         with:
-          commit_message: Minify source code
-          branch: ${{ github.ref }}
-        
+          output: 'build'
+          overwrite: true
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
