--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -16,5 +16,6 @@ jobs:
       # Auto-commit to repository
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          push_options: --force
           commit_message: Minify source code
           branch: gh-pages
