--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.4
         with:
-          folder: ./ # The folder the action should deploy.
+          folder: . # The folder the action should deploy.
