--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,17 +1,26 @@
 name: Build and Deploy
-on: [push]
-permissions:
-  contents: write
+
+on:
+  push:
+    branches: ['main']
+
+concurrency:
+  group: "minify"
+  cancel-in-progress: true
+
 jobs:
-  build-and-deploy:
-    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+  build:
+    environment: github-pages
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
       - name: Minify Action
         uses: anthonyftwang/minify-action@v1.0.1
+
+      - run: touch .nojekyll
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.4
