--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,6 @@
-name: Build and Deploy
+name: Minify
+
+run-name: Minify Code
 
 on:
   push:
@@ -26,6 +28,6 @@ jobs:
       - run: touch .nojekyll
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4.3.4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: . # The folder the action should deploy.
