--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Minify Action
         uses: anthonyftwang/minify-action@v1.0.1
 
+   - uses: MarketingPipeline/Image-Optimizer-Action@main
+     with:
+       filename: /img/
+       recursion: true
+
       - run: |
           touch .nojekyll
           find . -name "*.md" -type f -delete
