--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
+      - name: Minify Nr. 2
+        uses: nizarmah/auto-minify@v2.1.1
+        with:
+          overwrite: true
+
       - name: Minify Action
         uses: anthonyftwang/minify-action@v1.0.1
 
