--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -19,10 +19,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Minify Nr. 2
+      - name: Minify Code
         uses: Lenni009/minify-js@main
         with:
           overwrite: true
