--- a/.github/workflows/lintDoc.yml
+++ b/.github/workflows/lintDoc.yml
@@ -31,5 +31,5 @@ jobs:
 
       - uses: mshick/add-pr-comment@v2
         with:
-          message: ${{ GITHUB_OUTPUT }}
+          message: $GITHUB_OUTPUT
       - run: exit 1
