--- a/.github/workflows/lintDoc.yml
+++ b/.github/workflows/lintDoc.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Setup Env
         run: |
-          apt update
-          apt install moreutils -y
+          sudo apt update
+          sudo apt install moreutils -y
           npm install -g documentation
 
       - name: Lint JSDoc Comments
