--- a/.github/workflows/lintDoc.yml
+++ b/.github/workflows/lintDoc.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           touch lintOut.txt
           documentation lint ./**/*.js | sponge lintOut.txt
-          cat lintOut.txt
+          stat --printf="%s" lintOut.txt
 
       - name: Check if lintOut.txt is empty
         run: |
