--- a/.github/workflows/lintDoc.yml
+++ b/.github/workflows/lintDoc.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Check if lintOut.txt is empty
         run: |
           if [ ! -s lintOut.txt ]; then
+            echo "this is empty!!"
             exit 0
           fi
 
