--- a/.github/workflows/updatewiki.yml
+++ b/.github/workflows/updatewiki.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: Build Documentation Files
         run: |
-          npm install -g documentation
+          npm install -g jsdoc jsdoc-to-markdown
           mkdir Documentation
-          documentation build ./**/*.js -f md --github -o Documentation/functions.md
+          jsdoc2md ./**/*.js | sed 's/ÔçÆ/⇒/g' > documentation/Functions.md
 
       - name: Upload Documentation to Wiki
         uses: SwiftDocOrg/github-wiki-publish-action@v1
         with:
-          path: "Documentation"
+          path: "documentation"
         env:
           GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
