--- a/.github/workflows/updatewiki.yml
+++ b/.github/workflows/updatewiki.yml
@@ -24,11 +24,12 @@ jobs:
 
       - name: Build Documentation Files
         run: |
+          sudo apt install moreutils -y
           npm install -g jsdoc jsdoc-to-markdown
           mkdir documentation
           for file in $(find . -name "*.js")
           do
-            jsdoc2md "${file}" | sed 's/ÔçÆ/⇒/g' > documentation/${file}.md
+            jsdoc2md "${file}" | sed 's/ÔçÆ/⇒/g' | sponge documentation/${file}.md
           done
 
       - name: Upload Documentation to Wiki
