--- a/.github/workflows/updatewiki.yml
+++ b/.github/workflows/updatewiki.yml
@@ -14,4 +14,8 @@ jobs:
       contents: write
     
     steps:
-      - uses: Lenni009/jsdoc2wiki-action/create-doc@main
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Create Doc
+        uses: Lenni009/jsdoc2wiki-action/create-doc@main
