--- a/.github/workflows/updatewiki.yml
+++ b/.github/workflows/updatewiki.yml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Create Doc
         uses: Lenni009/jsdoc2wiki-action/create-doc@main
+        with:
+          secret: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
