--- a/.github/workflows/testDate.yml
+++ b/.github/workflows/testDate.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Do stuff
         run: |
+          date -d "$(date)" +"%s"
+          date -d "29/04/2023" +"%s"
           if [ date -d "$(date)" +"%s" < date -d "29/04/2023" +"%s" ]; then
             echo 'late!'
           else
