--- a/.github/workflows/testDate.yml
+++ b/.github/workflows/testDate.yml
@@ -25,10 +25,12 @@ jobs:
 
       - name: Do stuff
         run: |
-          date -d "$(date)" +"%s"
-          date -d "2024-04-29" +"%s"
-          if [ date -d "$(date)" +"%s" < date -d "2024-04-29" +"%s" ]; then
-            echo 'late!'
-          else
-            echo 'early!'
-          fi
+          todate=$(date -d "$(date)" +%s)
+          cond=$(date -d 2024-04-29 +%s)
+
+          if [ $todate -ge $cond ];
+          then
+              echo "early"
+            else
+              echo "late"
+          fi  
