--- a/.github/workflows/testDate.yml
+++ b/.github/workflows/testDate.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Do stuff
         run: |
-          current=$(date -d "$(date)" +%s)
-          dead=$(date -d 2024-04-29 +%s)
+          dead=$(date -d "$(date)" +%s)
+          current=$(date -d 2024-04-29 +%s)
 
           if [ $current -ge $dead ];
           then
