--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -5,6 +5,8 @@ run-name: Build Code
 on:
   pull_request:
     types: ['opened', 'synchronize']
+  push:
+    branches: ['main']
 
 permissions:
   contents: write
