--- a/.github/workflows/deploy-all-prs.yml
+++ b/.github/workflows/deploy-all-prs.yml
@@ -21,15 +21,15 @@ jobs:
       prData: ${{ steps.data.outputs.pullRequestData }}
 
     steps:
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+
       - name: Get PR Data
         id: data
-        run: Deno run --allow-net .github/workflows/getPRs.ts ${{ secrets.GITHUB_TOKEN }} # output: pullRequestData: {ref: string, number: number}[]
+        run: deno run --allow-net .github/workflows/getPRs.ts ${{ secrets.GITHUB_TOKEN }} # output: pullRequestData: {ref: string, number: number}[]
 
   deploy:
     runs-on: ubuntu-latest
