--- a/.github/workflows/deploy-all-prs.yml
+++ b/.github/workflows/deploy-all-prs.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Get PR Data
         id: data
-        run: deno run --allow-net .github/workflows/getPRs.ts ${{ github.repository }} ${{ github.repository_owner }} ${{ secrets.GITHUB_TOKEN }} # output: pullRequestData: {ref: string, number: number}[]
+        run: deno run --allow-net .github/workflows/getPRs.ts ${{ github.repository_owner }} ${{ github.repository }} ${{ secrets.GITHUB_TOKEN }} # output: pullRequestData: {ref: string, number: number}[]
 
   deploy:
     runs-on: ubuntu-latest
