--- a/.github/workflows/deploy-all-prs.yml
+++ b/.github/workflows/deploy-all-prs.yml
@@ -34,6 +34,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: getPRs
+    if: needs.getPRs.outputs.prData.length != 0
+
     strategy:
       matrix:
         data: ${{ fromJSON(needs.getPRs.outputs.prData) }}
