--- a/.github/workflows/deploy-all-prs.yml
+++ b/.github/workflows/deploy-all-prs.yml
@@ -37,7 +37,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: getPRs
-    if: needs.getPRs.outputs.prData.length != 0
+    if: fromJson(needs.getPRs.outputs.prData).length != 0
 
     strategy:
       matrix:
