--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build App
-        run: touch .nojekyll
+        run: touch .nojekyll  # custom build commands here
 
       - name: Get GH Pages URL
         id: pages
