--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Move Main Deployment
         run: |
           cd dist
-          cp -r pr/main .
+          cp -r pr/main/* .
           rm -rf pr/main
 
       - name: Deploy
