--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -1,6 +1,6 @@
-name: Minify
+name: Build
 
-run-name: Minify Code
+run-name: Build Code
 
 on:
   push:
@@ -16,7 +16,6 @@ concurrency:
 # You should only need to touch these two variables
 env:
   buildCommand: |
-    echo "hello world"
     touch .nojekyll
   buildOutput: . # optionally "dist" if build step is needed
 
