--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -90,15 +90,15 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
-
-      - run: ls dist
       
       - name: Download App
         uses: actions/download-artifact@v4
         with:
           path: dist/pr
 
-      - run: ls dist
+      - run: |
+          ls dist
+          ls dist/pr
 
       - name: Move Main Deployment
         run: |
