limit PRs to those to the main branch

--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -4,7 +4,8 @@ run-name: Deploy PR
 
 on:
   pull_request:
-    types: ['opened', 'synchronize']
+    types: ["opened", "synchronize"]
+    branches: ["main"]
 
 permissions:
   contents: write
@@ -19,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build App
-        run: touch .nojekyll  # custom build commands here
+        run: touch .nojekyll # custom build commands here
 
       - name: Get GH Pages URL
         id: pages
