remove nojekyll files

--- a/.github/workflows/deploy-all.yml
+++ b/.github/workflows/deploy-all.yml
@@ -16,7 +16,7 @@ concurrency:
 # You should only need to touch these two variables
 env:
   buildCommand: |
-    touch .nojekyll
+    echo hi
   buildOutput: . # optionally "dist" if build step is needed
 
 jobs:
