--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Build App
-        run: touch .nojekyll # custom build commands here
+    #  - name: Build App
+    #    run: touch .nojekyll # custom build commands here
 
       - name: Get GH Pages URL
         id: pages
